[tool.poetry]
name = "repl_python3_GoldRateTracker-1"
version = "0.1.0"
description = ""
authors = ["VigNalla <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
bs4 = "^0.0.1"
lxml = "^4.8.0"
twilio = "^7.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
